4/30実施分のコミット

--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,29 @@
   <link rel="stylesheet" href="/css/sample.css">
 </head>
 <body>
-  <header>勉強会用 サンプル</header>
+  <header><ruby>勉強会用<rt>べんきょうかいよう</rt></ruby> サンプル</header>
   <div id="app">
     count: <input id="cnt" type="text" readonly v-model="count"></input><br/>
     <button @click="countUp">カウントアップ</button>&nbsp;
     <button @click="countDown">カウントダウン</button>
   </div>
+  <div id="css-study" >
+    <div class="m-block">ブロック要素1</div>
+    <div class="m-block test">ブロック要素2</div>
+    <div class="m-block">ブロック要素3</div>
+    <div class="m-block">
+      <p>
+        <div id="test" class="m-block test">aaa</div>
+      </p>
+      ブロック要素4
+    </div>
+    <span class="m-inline">インライン要素1</span>
+    <span class="m-inline">インライン要素2</span>
+    <span class="m-inline">インライン要素3</span>
+    <span class="m-inline">インライン要素4</span>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
   <script type="text/javascript" src="/js/sample.js"></script>
-  <script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/2431_RC04/embed_loader.js"></script>
-  <script type="text/javascript"> trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"Vue","geo":"JP","time":"today 5-y"},{"keyword":"React","geo":"JP","time":"today 5-y"},{"keyword":"Angular","geo":"JP","time":"today 5-y"}],"category":0,"property":""}, {"exploreQuery":"date=today%205-y&geo=JP&q=Vue,React,Angular","guestPath":"https://trends.google.co.jp:443/trends/embed/"});</script>
   <script type="text/javascript">
     // https://jp.vuejs.org/v2/guide/instance.html
     // ライフサイクルのお勉強
