5/7の実行コード追加

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,16 @@
     <span class="m-inline">インライン要素3</span>
     <span class="m-inline">インライン要素4</span>
   </div>
+  <div id="js-event-test">
+    <div id="parent-1">
+      <span id="child-1-1">click me</span>
+      <span id="child-1-2">click me</span>
+    </div>
+    <div id="parent-2">
+      <span id="child-2-1">click me</span>
+      <span id="child-2-2">click me</span>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
   <script type="text/javascript" src="/js/sample.js"></script>
   <script type="text/javascript">
